--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -419,7 +419,7 @@ footer p{
         margin: 0 !important;
     }
     .frame_resp {
-      max-width: 100%;
+      width: 100%;
     }
     .common_div{
         text-align: center;
