--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap");
 
+
+:root {
+    --primary-color: #dc324f;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
- 
+    /* cursor: url('..assets\img\5388036.webp'), auto; */
 }
 
 /* header {
@@ -12,7 +17,7 @@
     background-color: rgb(101, 99, 99);
 } */
 .nav-style {
-    background: #fff;
+    background: var(--primary-color);
     box-shadow: 0 10px 30px 0 rgba(138, 155, 165, 0.15);
 }
 
@@ -20,17 +25,24 @@
     width: 175px;
     height: 60px;
 }
-
 .navbar-nav li a {
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     font-size: 14px;
-    font-weight: 600;
-    letter-spacing: 2px;
-    color: #333;
+    font-weight: 400;
+    color: #333 !important;
     position: relative;
-    font-family: 'Zilla Slab', serif;
+    /* padding-left: 5px; */
+    margin-left: 10px;
+}
 
+.navbar-nav {
+    align-items: center;
+    display: flex;
+}
 
+body{
+    position: relative;
+    font-family: 'Roboto', sans-serif;
 }
 
 .navbar-nav li a:before {
@@ -48,13 +60,10 @@
     width: 80%;
 }
 
-.navbar-nav li a:hover {
-    color: #db3136 !important;
-}
-
 .navbar-light .navbar-nav .nav-link.active,
 .navbar-light .navbar-nav .show>.nav-link {
-    color: #db3136 !important;
+
+    color: #fff !important;
 }
 
 @media(max-width:998px) {
@@ -62,7 +71,7 @@
 
         margin-top: 40px !important;
         text-align: center !important;
-
+       
     }
 
     .navbar-nav li a:hover:before {
@@ -73,67 +82,67 @@
 /* header-style */
 
 .header_text {
-    font-size: 26px;
-    color: #8c8c8c;
-    margin-top: 50px;
-    font-family: 'Zilla Slab', serif;
+    font-size: 48px;
+    color: #222;
+    margin-top: auto;
+    font-weight: 700;
+    line-height: 60px;
+    padding: 80px 0px 0px;
 }
-
 .header_text2 {
     font-size: 26px;
     color: #2d3436;
     margin-bottom: 70px;
 }
 
-
+.image-wrapper {
+    padding: 40px 0px 0px;
+    text-align: center;
+}
 
 .span_header_text {
     color: #0a0a0a;
 }              
 
 .hire_me {
-    /* width: 160px; */
-    padding: 0.5rem 2rem;
-    /* height: 40px; */
-    background-color: #000000;
-    border: 0.1em solid #020202;
     color: #fff;
     text-transform: capitalize;
     outline: none;
-    font-size: 1.5em;
-    /* border-radius: 35px; */
-    border: none;
-    /* transition: all 0.3s linear; */
-    font-weight: bold;
+    padding: 10px 24px;
+    border-radius: 50px;
+    background-color: #2749a5;
+    font-size: 16px;
+    line-height: 26px;
+    font-weight: 600;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid transparent;
 }
-
 .about_me {
-  /* width: 160px; */
-  padding: 0.5rem 2rem;
-  /* height: 40px; */
-  
-  background-color: #fff;
-  color: #db3136;
-  border: 0.1em solid #db3136;
-  text-transform: capitalize;
-  outline: none;
-  font-size: 1.5em;
-  /* border-radius: 35px; */
-
-  /* transition: all 0.3s linear; */
-  font-weight: bold;
+    color: #2749a5;
+    text-transform: capitalize;
+    outline: none;
+    padding: 10px 24px;
+    border-radius: 50px;
+    background-color: transparent;
+    font-size: 16px;
+    line-height: 26px;
+    font-weight: 600;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #2749a5;
 }
 
 .hire_me:hover {
     background-color: #fff;
-    color: #000000;
-    border: #000000 2px solid;
+    color: #1b3782;
+    border: 2px solid #1b3782;
 }
-
 .about_me:hover {
-    background-color: #db3136;
+    background-color: #1b3782;
     color: #fff;
-
 }
 
 .header_mail p {
@@ -152,14 +161,13 @@
 .about_sec {
     padding-top: 50px;
 }
-
 .main_title h1 {
-    font-weight: 500;
-    font-size: 80px;
-    color: #000;
+    font-weight: 700;
+    font-size: 48px;
+    color: #333;
     text-transform: capitalize;
-
     text-align: center;
+    line-height: 60px;
 }
 
 .about_text {
@@ -169,7 +177,7 @@
 .about_text h1 {
     font-size: 33px;
     color: #000;
-    margin-top: -20px;
+    margin-top: -20px;                                                                                                
     margin-bottom: 25px;
 }
 
@@ -281,7 +289,7 @@
 .services_div:hover{
     background-color: #fff;
     box-shadow: 0 0 4px 1px gray ;
-    cursor: pointer;
+    /* cursor: pointer; */
 }
 .services_div h1{
    text-align: center;
@@ -322,7 +330,32 @@ background: #ffeee6;
     text-transform: capitalize;
     padding-left: 5px;
  }
+ #clickElement {
+    width: 200px;
+    height: 100px;
+    background-color: lightblue;
+    text-align: center;
+    line-height: 100px;
+    cursor: pointer;
+}
+video {
+    width: 250px;
+  }
+  #invertElement {
+    width: 200px;
+    height: 100px;
+    background-color: lightblue;
+    text-align: center;
+    line-height: 100px;
+    cursor: pointer;
+}
 
+  /* video::cue {
+    font-size: 1rem;
+  }
+  button{
+    cursor:none !important;
+  } */
  .services_div li:first-child{
    
     padding-top: 20px;
@@ -331,6 +364,22 @@ background: #ffeee6;
     padding-right: 0px !important;
     padding-bottom: 0px !important;
  }
+
+body .accessibility_line {
+ background: #000;
+ width: 100% !important;
+ min-width: 100% !important;
+ top: 20px;
+ left: 0;
+ box-sizing: border-box;
+ height: 12px !important;
+ border: solid 3px #fff300;
+ border-radius: 5px;
+ position: fixed;
+ z-index: 99998;
+ 
+ pointer-events: none;
+}
 .hireme_section{
     padding-top: 45px;
     padding-bottom: 45px;
@@ -366,7 +415,7 @@ position: relative;
 
  .contact_share_div{
    
-   
+   padding: 15px;
     align-items: center;
     border-radius: 30px;
     background: #f6f6f6;
@@ -408,6 +457,7 @@ footer{
 footer p{
  margin: 0;
 }
+
 @media(max-width: 992px){
     .main_title h1{
         font-size: 40px;
@@ -440,4 +490,55 @@ footer p{
         margin-top: 30px !important;
     }
  
+}
+
+.navbar-light .navbar-brand {
+    color: #fff;
+    font-size: 32px;
+    font-weight: 600;
+}
+span.accessibility-icon iconify-icon {
+    font-size: 62px;
+    color: #fff;
+}
+.navbar-nav li a {
+    color: #fff !important;
+}
+.modal.accessibility-modal .modal-dialog {
+    max-width: 800px;
+}
+.button-wrapper button.btn.btn-primary {
+    padding: 10px 24px;
+    border-radius: 50px;
+    background-color: #ea2c4b;
+    border: none;
+    font-size: 16px;
+    line-height: 26px;
+    font-weight: 600;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.button-wrapper button.btn.btn-primary iconify-icon {
+    font-size: 26px;
+    margin-right: 8px;
+}
+.button-wrapper button.btn.btn-success {
+    padding: 12px 24px;
+    border-radius: 50px;
+    background-color: #092571;
+    border: none;
+    font-size: 16px;
+    line-height: 26px;
+    font-weight: 600;
+}
+.button-wrapper button.btn.btn-secondary {
+    margin-right: 10px;
+    padding: 12px 24px;
+    border-radius: 50px;
+    background-color: #86868a;
+    border: none;
+    font-size: 16px;
+    line-height: 26px;
+    font-weight: 600;
 }
