--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -418,6 +418,7 @@ body .accessibility_line {
  .contactme_sec{
     padding-top: 50px;
     padding-bottom: 70px;
+    background-image: url("../img/hand-putting-wooden-block-cube-symbol-telephone-email-address-mobile-phone-website-page-contact-us-e.png");
 
  }
  .contactme_section{
