--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -389,19 +389,22 @@ body .accessibility_line {
 }
 
 body .assessbility_reading_mask{
-    background: #000;
-    width: 100% !important;
-    min-width: 100% !important;
-    top: 20px;
-    left: 0;
-    box-sizing: border-box;
-    height: 50px !important;
-    border: solid 3px #fff300;
-    border-radius: 5px;
-    position: fixed;
- 
+
+        display: block !important;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        width: 100%;
+        height: 0;
+        pointer-events: none;
+        background-color: rgba(0,0,0,.5);
+        z-index: 100000000000000020000;
+    }
+
   
-}
+
 .hireme_section{
     padding-top: 45px;
     padding-bottom: 45px;
