--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -590,3 +590,24 @@ span.accessibility-icon iconify-icon {
     line-height: 26px;
     font-weight: 600;
 }
+
+body .accessibly-app-reading-mask-top {
+    top: 0;
+    bottom: auto;
+}
+body .accessibly-app-reading-mask {
+    display: block !important;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 100%;
+    height: 0;
+    pointer-events: none;
+   
+}
+body .accessibly-app-reading-mask-bottom {
+    bottom: 0;
+    top: auto;
+}
