--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,614 +1,92 @@
-@import url("https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap");
-
-
-:root {
-    --primary-color: #dc324f;
-}
-
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
-    /* cursor: url('..assets\img\5388036.webp'), auto; */
-}
-
-/* header {
-    height: 250px;
-    background-color: rgb(101, 99, 99);
-} */
-
-
-.nav-style {
-    background: var(--primary-color);
-    box-shadow: 0 10px 30px 0 rgba(138, 155, 165, 0.15);
-}
-
-.navbar-brand img {
-    width: 175px;
-    height: 60px;
-}
-.navbar-nav li a {
-    /* text-transform: uppercase; */
-    font-size: 14px;
-    font-weight: 400;
-    color: #333 !important;
-    position: relative;
-    /* padding-left: 5px; */
-    margin-left: 10px;
-}
-
-.navbar-nav {
-    align-items: center;
-    display: flex;
-}
-
-body{
-    position: relative;
-    font-family: 'Roboto', sans-serif;
-}
-
-.navbar-nav li a:before {
-    content: '';
-    position: absolute;
-    top: 100%;
-    bottom: 50%;
-    width: 0%;
-    height: 3%;
-    background: #db3136;
-    transition: all 0.3s linear;
-}
-
-.navbar-nav li a:hover:before {
-    width: 80%;
-}
-
-.navbar-light .navbar-nav .nav-link.active,
-.navbar-light .navbar-nav .show>.nav-link {
-    color: #fff !important;
-}
-
-
-@media(max-width:998px) {
-    .navbar-nav {
-
-        margin-top: 40px !important;
-        text-align: center !important;
-       
-    }
-
-    .navbar-nav li a:hover:before {
-        width: 0%;
-    }
-}
-
-/* header-style */
-
-.header_text {
-    font-size: 48px;
+  }
+  
+  body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: #f0f4f8;
     color: #333;
-    margin-top: auto;
-    font-weight: 700;
-    line-height: 60px;
-    padding: 80px 0px 0px;
-}
-.header_text2 {
-    font-size: 26px;
-    color: #2d3436;
-    margin-bottom: 70px;
-}
-.subscribe {
-    padding: 12px 42px;
-    border: none;
-    background: #ff9549;
+  }
+  
+  header {
+    background-color: #4a90e2;
     color: white;
-    font-size: 18px;
-    /* margin-right: 26px; */
-}
-.image-wrapper {
-    padding: 40px 0px 0px;
+    padding: 2rem;
     text-align: center;
-}
-
-.span_header_text {
-    color: #0a0a0a;
-}              
-
-.hire_me {
-    color: #fff;
-    text-transform: capitalize;
-    outline: none;
-    padding: 10px 24px;
-    border-radius: 50px;
-    background-color: #2749a5;
-    font-size: 16px;
-    line-height: 26px;
-    font-weight: 600;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 2px solid transparent;
-}
-.about_me {
-    color: #2749a5;
-    text-transform: capitalize;
-    outline: none;
-    padding: 10px 24px;
-    border-radius: 50px;
-    background-color: white;
-    font-size: 16px;
-    line-height: 26px;
-    font-weight: 600;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 2px solid #2749a5;
-}
-
-.hire_me:hover {
-    background-color: #fff;
-    color: #1b3782;
-    border: 2px solid #1b3782;
-}
-.about_me:hover {
-    background-color: #1b3782;
-    color: #fff;
-}
-
-.header_mail p {
-    margin-top: 40px;
-    font-size: 20px;
-    color: #000;
-    font-weight: 400;
-}
-
-.header_mail p:nth-child(2) {
-    margin-top: -20px;
-
-}
-
-/* <-about-section-> */
-.about_sec {
-    padding-top: 50px;
-}
-.main_title h1 {
-    font-weight: 700;
-    font-size: 48px;
-    color: #333;
-    text-transform: capitalize;
-    text-align: center;
-    line-height: 60px;
-}
-
-.about_text {
-    margin-top: -30px;
-}
-
-.about_text h1 {
-    font-size: 33px;
-    color: #000;
-    margin-top: -20px;                                                                                                
-    margin-bottom: 25px;
-}
-
-.about_text h1 {
-    font-size: 24px;
-
-}
-
-.about_text p {
-    font-size: 24px;
-    color: #000;
-}
-
-.expert_sec {
-    padding-top: 50px;
-}
-
-.main_title p {
-    font-size: 26px;
-    color: #000;
-}
-.common_div{
-    margin-top: 20px;
-}
-.expert_sec .progress {
-    width: 90%;
-    height: 14px;
-    border-radius: 7px;
-}
-
-.expert_sec .progress {
-    width: 80%;
-    height: 14px;
-    border-radius: 7px;
-}
-
-.expert_sec .pb_1 {
-    width: 93%;
-    border-radius: 7px;
-    background-color: #ea2148;
-
-}
-
-.expert_sec .pb_2 {
-    width: 93%;
-    border-radius: 7px;
-    background-color: #db3136;
-
-}
-
-.expert_sec .pb_3 {
-    width: 93%;
-    border-radius: 7px;
-    background-color: #1f643f;
-
-}
-
-.expert_sec h2 {
-    position: relative;
-}
-
-.expert_h1:after {
-    content: '93%';
-
-    position: absolute;
-    top: 10px;
-    right: 13%;
-    top: 10px;
-    right: 13%;
-    font-size: 16px;
-    color: #000;
-}
-
-.expert_h2:after {
-    content: '83%';
-
-    position: absolute;
-    top: 10px;
-    right: 13%;
-    top: 10px;
-    right: 13%;
-    font-size: 16px;
-    color: #000;
-}
-.expert_h3:after {
-    content: '83%';
-
-    position: absolute;
-    top: 10px;
-    right: 13%;
-    top: 10px;
-    right: 13%;
-    font-size: 16px;
-    color: #000;
-}
-/* our-services */
-.ourservices{
-    padding-top:50px;
-    padding-bottom:70px;
-}
-.services_div {
-    border-radius: #f6f6f6;
-    padding: 20px 10px 70px 10px;
-    margin-top: 50px;
-    transition: all 0.1s linear;
-    position: relative;
-    box-shadow: 0 10px 30px 0 rgba(138, 155, 165, 0.15);
-}
-.services_div:hover{
-    background-color: #fff;
-    box-shadow: 0 0 4px 1px gray ;
-    /* cursor: pointer; */
-}
-.services_div h1{
-   text-align: center;
-   font-size: 52px;
-   color: #db3136;
-position: relative;
-width: 70px;
-height: 70px;
-border-radius: 50%;
-margin: auto;
-background: #ffeee6;
-}
-.services_div h1:hover{
-  
- background:#fff;
- border: 1px solid #db3136;
-
- }
- .services_div .service_list_icon{
-    width: 14px;
-    height: 14px;
-    margin-right: 5px;
- }
- .fa-heart{
-    color: #f6f6f6;
-    position: absolute;
-    bottom: 1px;
-    left:1px
- }
- .services_div:hover .fa-heart{
-   color: #ffeee6;
- }
- .services_div li{
-    list-style: none;
-    font-size: 23px;
-    color: #000000;
-    font-weight: 300;
-    text-transform: capitalize;
-    padding-left: 5px;
- }
- #clickElement {
-    width: 200px;
-    height: 100px;
-    background-color: lightblue;
-    text-align: center;
-    line-height: 100px;
-    cursor: pointer;
-}
-video {
-    width: 250px;
   }
-  #invertElement {
-    width: 200px;
-    height: 100px;
-    background-color: lightblue;
-    text-align: center;
-    line-height: 100px;
-    cursor: pointer;
-}
-
-  /* video::cue {
-    font-size: 1rem;
-  }
-  button{
-    cursor:none !important;
-  } */
- .services_div li:first-child{
-   
-    padding-top: 20px;
- }
- .services_div .col-lg-3 .col-md-4 .col-10{
-    padding-right: 0px !important;
-    padding-bottom: 0px !important;
- }
-
-body .accessibility_line {
- background: #000;
- display: none;
- width: 100% !important;
- min-width: 100% !important;
- top: 20px;
- left: 0;
- box-sizing: border-box;
- height: 12px !important;
- border: solid 3px #fff300;
- border-radius: 5px;
- position: fixed;
- z-index: 99998;
- 
- pointer-events: none;
-}
-
-body .assessbility_reading_mask{
-
-        display: block !important;
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        margin: auto;
-        width: 100%;
-        height: 0;
-        pointer-events: none;
-        background-color: rgba(0,0,0,.5);
-        z-index: 100000000000000020000;
-    }
-
   
-
-.hireme_section{
-    padding-top: 45px;
-    padding-bottom: 45px;
-    text-align: center;
-    background-image:
-    linear-gradient(45deg,
-      rgba(245,70,66, 0.75),
-      rgba(8,83,156, 0.75)), url(
-'../img/front.jpg');
-    background-size: 100% 100%;
-    background-attachment: fixed;
- }
- .hireme_section h1{
-    font-size: 40px;
-    color: #333;
- }
- .hireme_section p{
-    font-size: 37px;
-    color:#ffffff;
-    letter-spacing: 3px;
- }
- .assessbility_reading_mask_dark{
-  
-        display: block !important;
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        margin: auto;
-        width: 100%;
-        height: 0;
-        pointer-events: none;
-        background-color: rgba(0,0,0,.5);
-        z-index: 100000000000000020000;
-    
- }
- .hireme_section h3{
-    font-size: 37px;
-    color: #ffffff;
-    margin-top:  -10px;
-    padding-bottom: 30px;
- }
- .contactme_sec{
-    padding-top: 50px;
-    padding-bottom: 70px;
-
- }
- .contactme_section{
-padding-top: 50px;
-padding-bottom: 50px;
-position: relative;
- }
-
- .contact_share_div{
-   
-   padding: 15px;
-    align-items: center;
-    border-radius: 30px;
-    background: #f6f6f6;
-    transition: all 0.2s linear;
-    
-}
-.contact_share_div:hover{
-   
-  
+  section {
+    max-width: 1000px;
+    margin: 2rem auto;
+    padding: 1rem;
     background: #ffffff;
-     border: 1px solid #db3136;
-     filter: drop-shadow(2px 0px 8px rgba(0, 0, 0, 18));
-    
-}
-.contact_share_div p{
-   margin: 0%;
-}
- /* social */
-
- .socialsites_links .fa-facebook-f:hover{
-    color:#3b5998;
- }
- .socialsites_links .fa-instagram:hover{
-    color:rgb(69, 12, 30);
- }
- .socialsites_links .fa-pinterest:hover{
-    color: #bd081c;
- }
- 
-  .socialsites_links .fa-behance:hover{
-    color:#131418
- }
-footer{
-    line-height: 50px;
-    background-color: #db3136;
-    color: #fff;
+    border-radius: 12px;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+  }
+  
+  h2 {
+    text-align: center;
+    color: #4a4a4a;
+    margin-bottom: 1.5rem;
+  }
+  
+  .embed-wrapper iframe {
     width: 100%;
-}
-footer p{
- margin: 0;
-}
-
-
-@media(max-width: 992px){
-    .main_title h1{
-        font-size: 40px;
-    }
-    .main_title p{
-        font-size: 18px;
-
-        
-    }
-    .about_text  {
-       margin: 0px;
-    }
-    .about_text h1 {
-        font-size: 26px;
-        font-weight: bold;
-    }
-   
-    .contact_img img{
-        display: none;
-    }
-    .contact_resp{
-        margin: 0 !important;
-    }
-    /* .frame_resp {
-      width: 100%;
-    } */
-    .common_div{
-        text-align: center;
-        justify-content: center;
-        margin-top: 30px !important;
-    }
- 
-}
-
-.navbar-light .navbar-brand {
-    color: #fff;
-    font-size: 32px;
-    font-weight: 600;
-}
-span.accessibility-icon iconify-icon {
-    font-size: 62px;
-    color: #fff;
-}
-.navbar-nav li a {
-    color: #fff !important;
-}
-.modal.accessibility-modal .modal-dialog {
-    max-width: 800px;
-}
-.button-wrapper button.btn.btn-primary {
-    padding: 10px 24px;
-    border-radius: 50px;
-    background-color: #ea2c4b;
+    height: 400px;
     border: none;
-    font-size: 16px;
-    line-height: 26px;
-    font-weight: 600;
+    border-radius: 10px;
+  }
+  
+  .instagram-feed {
     display: flex;
     justify-content: center;
-    align-items: center;
-}
-.button-wrapper button.btn.btn-primary iconify-icon {
-    font-size: 26px;
-    margin-right: 8px;
-}
-.button-wrapper button.btn.btn-success {
-    padding: 12px 24px;
-    border-radius: 50px;
-    background-color: #092571;
-    border: none;
-    font-size: 16px;
-    line-height: 26px;
-    font-weight: 600;
-}
-.button-wrapper button.btn.btn-secondary {
-    margin-right: 10px;
-    padding: 12px 24px;
-    border-radius: 50px;
-    background-color: #86868a;
-    border: none;
-    font-size: 16px;
-    line-height: 26px;
-    font-weight: 600;
-}
-
-body .accessibly-app-reading-mask-top {
-    top: 0;
-    bottom: auto;
-}
-body .accessibly-app-reading-mask {
-    display: block !important;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-    width: 100%;
-    height: 0;
-    pointer-events: none;
-   
-}
-body .accessibly-app-reading-mask-bottom {
-    bottom: 0;
-    top: auto;
-}
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+  
+  .insta-item {
+    width: 180px;
+    height: 180px;
+    border-radius: 10px;
+    background-size: cover;
+    background-position: center;
+    transition: transform 0.3s ease, filter 0.3s ease;
+  }
+  
+  .insta-item:hover {
+    transform: scale(1.05);
+    filter: brightness(1.2);
+  }
+  
+  .playstore {
+    text-align: center;
+    margin-top: 2rem;
+  }
+  
+  .playstore img {
+    width: 200px;
+    cursor: pointer;
+    transition: transform 0.2s ease-in-out;
+  }
+  
+  .playstore img:hover {
+    transform: scale(1.05);
+  }
+  
+  footer {
+    text-align: center;
+    padding: 1.5rem;
+    background-color: #4a90e2;
+    color: white;
+    margin-top: 2rem;
+  }
+  a img {
+    transition: transform 0.3s ease;
+  }
+  
+  a img:hover {
+    transform: scale(1.05);
+  }
+  
+  
