--- a/assets/css/integration.css
+++ b/assets/css/integration.css
@@ -10,30 +10,168 @@
 }
 .product-title {
     font-size: 14px;
+    min-height: 50px;
 }
-
 .mask .collage .btn-shop {
     font-size: 1rem;
     height: auto;
     padding: 11px 16px;
-    background-color: #4943434d;
-    border: 0;
-    color: currentColor;
-    text-decoration: none;
-    font-weight: 500;
-    cursor: pointer;
-    border: 1px solid var(--color-form-border);
-}
-
-.mask .collage .btn-shop:hover {
-    font-size: 1rem;
-    height: auto;
-    padding: 11px 16px;
-    background-color: transparent;
+    background-color: #1f80e700;
     border: 0;
     color: #000000;
     text-decoration: none;
     font-weight: 500;
     cursor: pointer;
-    border: 1px solid var(--color-form-border);
+    border: 1px solid #a9a9a9;
 }
+
+.WidgetTitle__Header-sc-581bc1ec-2.dLkQRC,
+.eapps-widget-toolbar-panel-wrapper {
+    display: none;
+}
+.BulletsControl__BulletsControlInner-sc-f6dcbc14-1.eAxLGn.es-bullets-control-inner {
+    margin: 12px 0px !important;
+}
+
+section.google-reviews {
+    background: linear-gradient(180deg, #f7fbff 19.03%, #4699f117 100%);
+}
+div.google-reviews {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    text-align: center;
+}
+
+.es-review-content-text{
+    font-size: 0.85rem;
+    font-weight: 300;
+    line-height: 24px;
+    letter-spacing: 0em;
+    text-align: center;
+   color: rgb(108, 117, 125);
+}
+
+.dhWxhH {
+    display: flex;
+    flex-direction: column-reverse !important;
+    flex-grow: 1;
+    align-items: center;
+}
+.eifxTJ {
+    margin-top: 16px 0px !important;
+}
+.Main__Content-sc-50768d0-1.gVqCtV.es-main-content {
+    display: flex !important;
+    flex-direction: column-reverse !important;
+}
+.lfyDvl {
+    margin:16px 0px !important;
+}
+.close-icon {
+    display: flex;
+    justify-content: end;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    margin-top: 0px !important;
+}
+.close-icon {
+    font-size: 3rem;
+    color: white;
+    background: none;
+    border: none;
+  }
+
+  .modal-dialog i{
+    font-size: 12px;
+  }
+  .modal-dialog i:hover {
+    background: transparent;
+    color: black !important;
+}
+.accessbility-logo i:hover{
+    background: transparent;
+    color: #ffffff !important;  
+}
+.entry-description p {
+    color: #000000;
+}
+.mask .collage .btn-shop:hover {
+    background: #aba9a9;
+    color: white;
+}
+
+.video-content h3 {
+    color: white;
+}
+  /* Responsive */
+  @media (max-width: 992px) {
+    section.slider {
+        padding: 0px 0;
+        overflow: hidden;
+    }
+    .entry-subtitle {
+        color: #ffffff;
+    }
+    .banner-title {
+        color: #ffffff;
+    }
+    
+  
+}
+@media (max-width: 767px) {
+    .slider.slider {
+        margin-top: 0;
+        height: auto;
+        background-color: transparent;
+        padding: 0;
+    }
+    .entry-description p {
+        color: #ffffff;
+    }
+    .mask .collage .btn-shop {
+        font-size: 0.58rem;
+        height: auto;
+        padding: 11px 16px;
+        background-color: #1f80e700;
+        border: 0;
+        color: #ffffff;
+        text-decoration: none;
+        font-weight: 500;
+        cursor: pointer;
+        border: 1px solid #a9a9a9;
+    }
+    .collage .entry-description p {
+        color: #000000;
+        margin-bottom: 0px !important;
+    }
+    .collage .banner-title {
+        font-size: 2rem;
+        font-weight: 400;
+        line-height: 1.2em;
+        color: black;
+    }
+    .collage .btn-shop {
+        font-size: 1rem;
+        height: auto;
+        padding: 11px 16px;
+        background-color: transparent;
+        border: 0;
+        color: currentColor;
+        text-decoration: none;
+        font-weight: 500;
+        cursor: pointer;
+        border: 1px solid var(--color-form-border);
+    }
+    .slider.slider {
+        margin-top: 0;
+        height: auto;
+        background-color: transparent;
+        padding: 0;
+    }
+}
+
+
