--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,10 +182,23 @@ ul li ul li {
 .header-msg {
     font-size: 13px;
 }
+.video-content p {
+    color: #ffffff;
+}
+.hero {
+    background-image: url("https://raw.githubusercontent.com/Pushplata05/ecommerce/main/assets/images/banner-box2.jpg");
+    background-color: #cccccc;
+    height: 500px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 .icon-size {
-    padding-right: 18px;
+    display: flex;
+    justify-content: center;
     font-size: 20px;
+    margin: 0px 12px;
 }
 
 .nav-item,
@@ -1275,7 +1288,7 @@ i.fa-bag-shopping:hover, .fa-rotate:hover, .fa-compress:hover, i:hover{
         }
         .banner-title {
             color: var(--color-text);
-            font-size: 2.125rem;
+            font-size: 1.125rem;
             font-weight: 500;
             line-height: 1.1;
             margin-bottom: 0.25rem;
@@ -1299,8 +1312,8 @@ i.fa-bag-shopping:hover, .fa-rotate:hover, .fa-compress:hover, i:hover{
             right: 42px;
             font-size: 51px !important;
         }
-        .header-row2{
-           display: block;
+        .header-row2 {
+            display: none;
         }
         .footer-dark h3 {
            
@@ -1385,9 +1398,9 @@ i.fa-bag-shopping:hover, .fa-rotate:hover, .fa-compress:hover, i:hover{
     .nav-icons{
         justify-content: center;
     }
-    .mask{
-        margin: 49px 28px 0px;
-        }
+    .mask {
+        margin: 11px 28px 0px;
+    }
         .products .product-text{
             margin: 40px 0px
         }
